# sas7bdat-converter-cli

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: release_draft_template.yaml
.github/workflows/: pypi_publish.yaml  release_drafter.yaml  testing.yaml
sas7bdat_converter_cli/: __main__.py  main.py
tests/: conftest.py  test_main.py
