[tool.poetry]
name = "sas7bdat-converter-cli"
version = "1.0.0"
description = "CLI to convert sas7bdat and xport files into other formats"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pbs-data-solutions/sas7bdat-converter-cli"
homepage = "https://github.com/pbs-data-solutions/sas7bdat-converter-cli"
documentation = "https://github.com/pbs-data-solutions/sas7bdat-converter-cli"
keywords = ["sas", "sas7bdat", "converter", "xpt", "XPort"]
classifiers=[
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
include = ["sas7bdat_converter_cli/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "0.12.3"
sas7bdat-converter = {version = "2.0.1", extras = ["all"]}
rich = "13.7.1"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
mypy = "1.9.0"
pre-commit = "3.5.0"
pytest = "8.1.1"
pytest-cov = "5.0.0"
ruff = "0.3.7"
tomli = {version = "2.0.1", python = "<3.11"}
pandas-stubs = "2.0.3.230814"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sas7bdat-converter = "sas7bdat_converter_cli.main:app"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=sas7bdat_converter_cli --cov-report term-missing"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = 100
target-version = "py38"
fix = true
