[tool.poetry]
name = "sas7bdat-converter-cli"
version = "2.0.0"
description = "CLI to convert sas7bdat and xport files into other formats"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pbs-data-solutions/sas7bdat-converter-cli"
homepage = "https://github.com/pbs-data-solutions/sas7bdat-converter-cli"
documentation = "https://github.com/pbs-data-solutions/sas7bdat-converter-cli"
keywords = ["sas", "sas7bdat", "converter", "xpt", "XPort"]
classifiers=[
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
include = ["sas7bdat_converter_cli/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "0.16.0"
sas7bdat-converter = {version = "3.0.0", extras = ["all"]}
rich = "14.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.16.1"
pre-commit = "4.2.0"
pytest = "8.4.1"
pytest-cov = "6.2.1"
ruff = "0.12.0"
tomli = {version = "2.2.1", python = "<3.11"}
pandas-stubs = "2.2.3.250527"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sas7bdat-converter = "sas7bdat_converter_cli.main:app"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=sas7bdat_converter_cli --cov-report term-missing"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py38"
fix = true

[tool.ruff.lint]
select=["E", "F", "UP", "I001", "T201", "T203"]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
